inclucion de tweet y otros

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <%= link_to 'registrar', new_user_registration_path %>
   <%= link_to 'salir', destroy_user_session_path, method: :delete %>
 
+<h1>Bienvenidos</h1>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
