--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,19 +6,29 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-  <%= link_to 'Nuevo Usuario', new_user_session_path %>
-  <%= link_to 'registrar', new_user_registration_path %>
-  <%= link_to 'salir', destroy_user_session_path, method: :delete %>
+<nav class="navbar navbar-light bg-light">
+  <form class="form-inline">
+    <button class="btn btn-sm btn-outline-secondary" type="button"><%= link_to 'Sign_in', new_user_session_path %></button>
+    <button class="btn btn-sm btn-outline-secondary" type="button"><%= link_to 'registration', new_user_registration_path %></button>
+    <button class="btn btn-sm btn-outline-secondary" type="button"><%= link_to 'sign_out', destroy_user_session_path, method: :delete %></button>
+  </form>
+</nav>
+<div class= 'container'>
 
-<h1>Bienvenidos</h1>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+  <h1>Bienvenidos</h1>
     <%= yield %>
+    </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
   </body>
 </html>
