--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -27,3 +27,10 @@
 <br>
 
 <%= link_to 'New Tweet', new_tweet_path %>
+
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <%= paginate @tweets %>
+  </div>
+</div>
+
