--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -12,3 +12,13 @@
 
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweets_path %>
+
+<% if user_signed_in? %>
+<% liked = @tweet.likes.where(user:current_user) %>
+<% if liked.present? %>
+<%=button_to "unlike", tweet_like_path(@tweet, liked.first), method: :delete %>
+<% else %> 
+<%=button_to "like", tweet_likes_path(@tweet), method: :post %>
+<% end %>
+<% end%>
+
