--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -13,6 +13,9 @@
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweets_path %>
 
+<%= @tweet.created_at %>
+
+
 <% if user_signed_in? %>
 <% liked = @tweet.likes.where(user:current_user) %>
 <% if liked.present? %>
